--- a/img-compress.html
+++ b/img-compress.html
@@ -575,7 +575,7 @@
     <main>
         <section class="hero">
             <div class="container">
-                <h1>Optimize Your Images in Seconds</h1>
+                <h1>/img-compress.html</h1>
                 <p>Reduce image file sizes without sacrificing quality. Perfect for websites, social media, and storage optimization.</p>
             </div>
         </section>
