img-compress.html

--- a/img-compress.html
+++ b/img-compress.html
@@ -79,7 +79,7 @@
 
         <!-- Compression Tool -->
         <div class="tool">
-            <h1>Image Compression Tool</h1>
+            <h1>/tool/Image Compression Tool</h1>
             <input type="file" id="image-upload" accept="image/*">
             <div id="original-preview"></div>
             <label for="quality-level">Quality Level (0-100):</label>
