--- a/Index.html
+++ b/Index.html
@@ -832,7 +832,7 @@
                     <div class="tool-content">
                         <h3>Image Compressor</h3>
                         <p>Reduce image file size without losing quality</p>
-                        <a href="#" class="tool-link">Use Tool</a>
+                        <a href="#" class="tool-link">tool/img-compress.html</a>
                     </div>
                 </div>
                 
