--- a/Index.html
+++ b/Index.html
@@ -232,7 +232,7 @@
                     <img src="image-compressor.jpg" alt="Image Compressor">
                     <h2>Image Compressor</h2>
                     <p>Reduce image size without losing quality.</p>
-                    <a href="#" class="btn">Use Tool</a>
+                    <a href="#" class="btn">Use Tool/img-compress.html</a>
                 </div>
                 <div class="slide">
                     <img src="pdf-merger.jpg" alt="PDF Merger">
