--- a/Index.html
+++ b/Index.html
@@ -232,19 +232,19 @@
                     <img src="image-compressor.jpg" alt="Image Compressor">
                     <h2>Image Compressor</h2>
                     <p>Reduce image size without losing quality.</p>
-                    <a href="#" class="btn">Use Tool/img-compress.html</a>
+                    <a href="#" class="btn">Use Tool</a>
                 </div>
                 <div class="slide">
                     <img src="pdf-merger.jpg" alt="PDF Merger">
                     <h2>PDF Merger</h2>
                     <p>Combine multiple PDFs into one.</p>
-                    <a href="#" class="btn">too/img-compress.html</a>
+                    <a href="#" class="btn">Use Tool</a>
                 </div>
                 <div class="slide">
                     <img src="image-to-pdf.jpg" alt="Image to PDF">
                     <h2>Image to PDF</h2>
                     <p>Convert images to PDF documents.</p>
-                    <a href="#" class="btn">too/img-compress.html</a>
+                    <a href="#" class="btn">Use Tool</a>
                 </div>
             </div>
         </section>
